y.output
Terminals unused in grammar

    RESERVED
    LOWER_THAN_ELSE


Grammar

    0 $accept: FunctionsAndDeclarations $end

    1 FunctionsAndDeclarations: FunctionDefinition
    2                         | FunctionDeclaration
    3                         | Declaration
    4                         | FunctionsAndDeclarations FunctionDefinition
    5                         | FunctionsAndDeclarations FunctionDeclaration
    6                         | FunctionsAndDeclarations Declaration

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    8 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
    9             | LBRACE RBRACE

   10 DeclarationsAndStatements: Statement
   11                          | Declaration
   12                          | DeclarationsAndStatements Statement
   13                          | DeclarationsAndStatements Declaration

   14 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   15 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR

   16 ParameterList: ParameterDeclaration
   17              | ParameterList COMMA ParameterDeclaration

   18 ParameterDeclaration: TypeSpec IDENTIFIER
   19                     | TypeSpec

   20 Declaration: TypeSpec DeclaratorList SEMI
   21            | error SEMI

   22 DeclaratorList: Declarator
   23               | DeclaratorList COMMA Declarator

   24 TypeSpec: CHAR
   25         | INT
   26         | VOID
   27         | SHORT
   28         | DOUBLE

   29 Declarator: IDENTIFIER
   30           | IDENTIFIER ASSIGN Expr

   31 StatementError: Statement
   32               | error SEMI

   33 Statement: ExprList SEMI
   34          | SEMI
   35          | LBRACE StatementList RBRACE
   36          | LBRACE RBRACE
   37          | IF LPAR ExprList RPAR StatementError ELSE StatementError
   38          | IF LPAR ExprList RPAR StatementError
   39          | WHILE LPAR ExprList RPAR StatementError
   40          | RETURN SEMI
   41          | RETURN ExprList SEMI
   42          | LBRACE error RBRACE

   43 StatementList: StatementList StatementError
   44              | StatementError

   45 Expr: Expr ASSIGN Expr
   46     | Expr PLUS Expr
   47     | Expr MINUS Expr
   48     | Expr MUL Expr
   49     | Expr DIV Expr
   50     | Expr MOD Expr
   51     | Expr OR Expr
   52     | Expr AND Expr
   53     | Expr BITWISEAND Expr
   54     | Expr BITWISEOR Expr
   55     | Expr BITWISEXOR Expr
   56     | Expr EQ Expr
   57     | Expr NE Expr
   58     | Expr LE Expr
   59     | Expr GE Expr
   60     | Expr LT Expr
   61     | Expr GT Expr
   62     | PLUS Expr
   63     | MINUS Expr
   64     | NOT Expr
   65     | IDENTIFIER LPAR ArgList RPAR
   66     | IDENTIFIER
   67     | NATURAL
   68     | CHRLIT
   69     | DECIMAL
   70     | LPAR ExprList RPAR
   71     | IDENTIFIER LPAR RPAR
   72     | IDENTIFIER LPAR error RPAR
   73     | LPAR error RPAR

   74 ExprList: ExprList COMMA Expr
   75         | Expr

   76 ArgList: Expr
   77        | ArgList COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 21 32 42 72 73
    IDENTIFIER <lexeme> (258) 15 18 29 30 65 66 71 72
    CHRLIT <lexeme> (259) 68
    DECIMAL <lexeme> (260) 69
    NATURAL <lexeme> (261) 67
    RESERVED <lexeme> (262)
    ASSIGN (263) 30 45
    COMMA (264) 17 23 74 77
    PLUS (265) 46 62
    MINUS (266) 47 63
    MUL (267) 48
    DIV (268) 49
    MOD (269) 50
    OR (270) 51
    AND (271) 52
    BITWISEAND (272) 53
    BITWISEOR (273) 54
    BITWISEXOR (274) 55
    EQ (275) 56
    NE (276) 57
    LE (277) 58
    GE (278) 59
    LT (279) 60
    GT (280) 61
    NOT (281) 64
    LPAR (282) 15 37 38 39 65 70 71 72 73
    RPAR (283) 15 37 38 39 65 70 71 72 73
    LBRACE (284) 8 9 35 36 42
    RBRACE (285) 8 9 35 36 42
    SEMI (286) 14 20 21 32 33 34 40 41
    IF (287) 37 38
    ELSE (288) 37
    WHILE (289) 39
    CHAR <lexeme> (290) 24
    INT <lexeme> (291) 25
    VOID <lexeme> (292) 26
    SHORT <lexeme> (293) 27
    DOUBLE <lexeme> (294) 28
    RETURN <lexeme> (295) 40 41
    LOWER_THAN_ELSE (296)


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    FunctionsAndDeclarations <node> (43)
        on left: 1 2 3 4 5 6
        on right: 0 4 5 6
    FunctionDefinition <node> (44)
        on left: 7
        on right: 1 4
    FunctionBody <node> (45)
        on left: 8 9
        on right: 7
    DeclarationsAndStatements <node> (46)
        on left: 10 11 12 13
        on right: 8 12 13
    FunctionDeclaration <node> (47)
        on left: 14
        on right: 2 5
    FunctionDeclarator <node> (48)
        on left: 15
        on right: 7 14
    ParameterList <node> (49)
        on left: 16 17
        on right: 15 17
    ParameterDeclaration <node> (50)
        on left: 18 19
        on right: 16 17
    Declaration <node> (51)
        on left: 20 21
        on right: 3 6 11 13
    DeclaratorList <node> (52)
        on left: 22 23
        on right: 20 23
    TypeSpec <node> (53)
        on left: 24 25 26 27 28
        on right: 7 14 18 19 20
    Declarator <node> (54)
        on left: 29 30
        on right: 22 23
    StatementError <node> (55)
        on left: 31 32
        on right: 37 38 39 43 44
    Statement <node> (56)
        on left: 33 34 35 36 37 38 39 40 41 42
        on right: 10 12 31
    StatementList <node> (57)
        on left: 43 44
        on right: 35 43
    Expr <node> (58)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
        on right: 30 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 74 75 76 77
    ExprList <node> (59)
        on left: 74 75
        on right: 33 37 38 39 41 70 74
    ArgList <node> (60)
        on left: 76 77
        on right: 65 77


State 0

    0 $accept: • FunctionsAndDeclarations $end
    1 FunctionsAndDeclarations: • FunctionDefinition
    2                         | • FunctionDeclaration
    3                         | • Declaration
    4                         | • FunctionsAndDeclarations FunctionDefinition
    5                         | • FunctionsAndDeclarations FunctionDeclaration
    6                         | • FunctionsAndDeclarations Declaration
    7 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   14 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   20 Declaration: • TypeSpec DeclaratorList SEMI
   21            | • error SEMI
   24 TypeSpec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    VOID    shift, and go to state 4
    SHORT   shift, and go to state 5
    DOUBLE  shift, and go to state 6

    FunctionsAndDeclarations  go to state 7
    FunctionDefinition        go to state 8
    FunctionDeclaration       go to state 9
    Declaration               go to state 10
    TypeSpec                  go to state 11


State 1

   21 Declaration: error • SEMI

    SEMI  shift, and go to state 12


State 2

   24 TypeSpec: CHAR •

    $default  reduce using rule 24 (TypeSpec)


State 3

   25 TypeSpec: INT •

    $default  reduce using rule 25 (TypeSpec)


State 4

   26 TypeSpec: VOID •

    $default  reduce using rule 26 (TypeSpec)


State 5

   27 TypeSpec: SHORT •

    $default  reduce using rule 27 (TypeSpec)


State 6

   28 TypeSpec: DOUBLE •

    $default  reduce using rule 28 (TypeSpec)


State 7

    0 $accept: FunctionsAndDeclarations • $end
    4 FunctionsAndDeclarations: FunctionsAndDeclarations • FunctionDefinition
    5                         | FunctionsAndDeclarations • FunctionDeclaration
    6                         | FunctionsAndDeclarations • Declaration
    7 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   14 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   20 Declaration: • TypeSpec DeclaratorList SEMI
   21            | • error SEMI
   24 TypeSpec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE

    $end    shift, and go to state 13
    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    VOID    shift, and go to state 4
    SHORT   shift, and go to state 5
    DOUBLE  shift, and go to state 6

    FunctionDefinition   go to state 14
    FunctionDeclaration  go to state 15
    Declaration          go to state 16
    TypeSpec             go to state 11


State 8

    1 FunctionsAndDeclarations: FunctionDefinition •

    $default  reduce using rule 1 (FunctionsAndDeclarations)


State 9

    2 FunctionsAndDeclarations: FunctionDeclaration •

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 10

    3 FunctionsAndDeclarations: Declaration •

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 11

    7 FunctionDefinition: TypeSpec • FunctionDeclarator FunctionBody
   14 FunctionDeclaration: TypeSpec • FunctionDeclarator SEMI
   15 FunctionDeclarator: • IDENTIFIER LPAR ParameterList RPAR
   20 Declaration: TypeSpec • DeclaratorList SEMI
   22 DeclaratorList: • Declarator
   23               | • DeclaratorList COMMA Declarator
   29 Declarator: • IDENTIFIER
   30           | • IDENTIFIER ASSIGN Expr

    IDENTIFIER  shift, and go to state 17

    FunctionDeclarator  go to state 18
    DeclaratorList      go to state 19
    Declarator          go to state 20


State 12

   21 Declaration: error SEMI •

    $default  reduce using rule 21 (Declaration)


State 13

    0 $accept: FunctionsAndDeclarations $end •

    $default  accept


State 14

    4 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition •

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 15

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration •

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 16

    6 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration •

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 17

   15 FunctionDeclarator: IDENTIFIER • LPAR ParameterList RPAR
   29 Declarator: IDENTIFIER •  [COMMA, SEMI]
   30           | IDENTIFIER • ASSIGN Expr

    ASSIGN  shift, and go to state 21
    LPAR    shift, and go to state 22

    $default  reduce using rule 29 (Declarator)


State 18

    7 FunctionDefinition: TypeSpec FunctionDeclarator • FunctionBody
    8 FunctionBody: • LBRACE DeclarationsAndStatements RBRACE
    9             | • LBRACE RBRACE
   14 FunctionDeclaration: TypeSpec FunctionDeclarator • SEMI

    LBRACE  shift, and go to state 23
    SEMI    shift, and go to state 24

    FunctionBody  go to state 25


State 19

   20 Declaration: TypeSpec DeclaratorList • SEMI
   23 DeclaratorList: DeclaratorList • COMMA Declarator

    COMMA  shift, and go to state 26
    SEMI   shift, and go to state 27


State 20

   22 DeclaratorList: Declarator •

    $default  reduce using rule 22 (DeclaratorList)


State 21

   30 Declarator: IDENTIFIER ASSIGN • Expr
   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR

    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35

    Expr  go to state 36


State 22

   15 FunctionDeclarator: IDENTIFIER LPAR • ParameterList RPAR
   16 ParameterList: • ParameterDeclaration
   17              | • ParameterList COMMA ParameterDeclaration
   18 ParameterDeclaration: • TypeSpec IDENTIFIER
   19                     | • TypeSpec
   24 TypeSpec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE

    CHAR    shift, and go to state 2
    INT     shift, and go to state 3
    VOID    shift, and go to state 4
    SHORT   shift, and go to state 5
    DOUBLE  shift, and go to state 6

    ParameterList         go to state 37
    ParameterDeclaration  go to state 38
    TypeSpec              go to state 39


State 23

    8 FunctionBody: LBRACE • DeclarationsAndStatements RBRACE
    9             | LBRACE • RBRACE
   10 DeclarationsAndStatements: • Statement
   11                          | • Declaration
   12                          | • DeclarationsAndStatements Statement
   13                          | • DeclarationsAndStatements Declaration
   20 Declaration: • TypeSpec DeclaratorList SEMI
   21            | • error SEMI
   24 TypeSpec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE
   33 Statement: • ExprList SEMI
   34          | • SEMI
   35          | • LBRACE StatementList RBRACE
   36          | • LBRACE RBRACE
   37          | • IF LPAR ExprList RPAR StatementError ELSE StatementError
   38          | • IF LPAR ExprList RPAR StatementError
   39          | • WHILE LPAR ExprList RPAR StatementError
   40          | • RETURN SEMI
   41          | • RETURN ExprList SEMI
   42          | • LBRACE error RBRACE
   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR
   74 ExprList: • ExprList COMMA Expr
   75         | • Expr

    error       shift, and go to state 1
    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35
    LBRACE      shift, and go to state 40
    RBRACE      shift, and go to state 41
    SEMI        shift, and go to state 42
    IF          shift, and go to state 43
    WHILE       shift, and go to state 44
    CHAR        shift, and go to state 2
    INT         shift, and go to state 3
    VOID        shift, and go to state 4
    SHORT       shift, and go to state 5
    DOUBLE      shift, and go to state 6
    RETURN      shift, and go to state 45

    DeclarationsAndStatements  go to state 46
    Declaration                go to state 47
    TypeSpec                   go to state 48
    Statement                  go to state 49
    Expr                       go to state 50
    ExprList                   go to state 51


State 24

   14 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI •

    $default  reduce using rule 14 (FunctionDeclaration)


State 25

    7 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody •

    $default  reduce using rule 7 (FunctionDefinition)


State 26

   23 DeclaratorList: DeclaratorList COMMA • Declarator
   29 Declarator: • IDENTIFIER
   30           | • IDENTIFIER ASSIGN Expr

    IDENTIFIER  shift, and go to state 52

    Declarator  go to state 53


State 27

   20 Declaration: TypeSpec DeclaratorList SEMI •

    $default  reduce using rule 20 (Declaration)


State 28

   65 Expr: IDENTIFIER • LPAR ArgList RPAR
   66     | IDENTIFIER •  [ASSIGN, COMMA, PLUS, MINUS, MUL, DIV, MOD, OR, AND, BITWISEAND, BITWISEOR, BITWISEXOR, EQ, NE, LE, GE, LT, GT, RPAR, SEMI]
   71     | IDENTIFIER • LPAR RPAR
   72     | IDENTIFIER • LPAR error RPAR

    LPAR  shift, and go to state 54

    $default  reduce using rule 66 (Expr)


State 29

   68 Expr: CHRLIT •

    $default  reduce using rule 68 (Expr)


State 30

   69 Expr: DECIMAL •

    $default  reduce using rule 69 (Expr)


State 31

   67 Expr: NATURAL •

    $default  reduce using rule 67 (Expr)


State 32

   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   62     | PLUS • Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR

    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35

    Expr  go to state 55


State 33

   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   63     | MINUS • Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR

    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35

    Expr  go to state 56


State 34

   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   64     | NOT • Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR

    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35

    Expr  go to state 57


State 35

   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   70     | LPAR • ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR
   73     | LPAR • error RPAR
   74 ExprList: • ExprList COMMA Expr
   75         | • Expr

    error       shift, and go to state 58
    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35

    Expr      go to state 50
    ExprList  go to state 59


State 36

   30 Declarator: IDENTIFIER ASSIGN Expr •  [COMMA, SEMI]
   45 Expr: Expr • ASSIGN Expr
   46     | Expr • PLUS Expr
   47     | Expr • MINUS Expr
   48     | Expr • MUL Expr
   49     | Expr • DIV Expr
   50     | Expr • MOD Expr
   51     | Expr • OR Expr
   52     | Expr • AND Expr
   53     | Expr • BITWISEAND Expr
   54     | Expr • BITWISEOR Expr
   55     | Expr • BITWISEXOR Expr
   56     | Expr • EQ Expr
   57     | Expr • NE Expr
   58     | Expr • LE Expr
   59     | Expr • GE Expr
   60     | Expr • LT Expr
   61     | Expr • GT Expr

    ASSIGN      shift, and go to state 60
    PLUS        shift, and go to state 61
    MINUS       shift, and go to state 62
    MUL         shift, and go to state 63
    DIV         shift, and go to state 64
    MOD         shift, and go to state 65
    OR          shift, and go to state 66
    AND         shift, and go to state 67
    BITWISEAND  shift, and go to state 68
    BITWISEOR   shift, and go to state 69
    BITWISEXOR  shift, and go to state 70
    EQ          shift, and go to state 71
    NE          shift, and go to state 72
    LE          shift, and go to state 73
    GE          shift, and go to state 74
    LT          shift, and go to state 75
    GT          shift, and go to state 76

    $default  reduce using rule 30 (Declarator)


State 37

   15 FunctionDeclarator: IDENTIFIER LPAR ParameterList • RPAR
   17 ParameterList: ParameterList • COMMA ParameterDeclaration

    COMMA  shift, and go to state 77
    RPAR   shift, and go to state 78


State 38

   16 ParameterList: ParameterDeclaration •

    $default  reduce using rule 16 (ParameterList)


State 39

   18 ParameterDeclaration: TypeSpec • IDENTIFIER
   19                     | TypeSpec •  [COMMA, RPAR]

    IDENTIFIER  shift, and go to state 79

    $default  reduce using rule 19 (ParameterDeclaration)


State 40

   31 StatementError: • Statement
   32               | • error SEMI
   33 Statement: • ExprList SEMI
   34          | • SEMI
   35          | • LBRACE StatementList RBRACE
   35          | LBRACE • StatementList RBRACE
   36          | • LBRACE RBRACE
   36          | LBRACE • RBRACE
   37          | • IF LPAR ExprList RPAR StatementError ELSE StatementError
   38          | • IF LPAR ExprList RPAR StatementError
   39          | • WHILE LPAR ExprList RPAR StatementError
   40          | • RETURN SEMI
   41          | • RETURN ExprList SEMI
   42          | • LBRACE error RBRACE
   42          | LBRACE • error RBRACE
   43 StatementList: • StatementList StatementError
   44              | • StatementError
   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR
   74 ExprList: • ExprList COMMA Expr
   75         | • Expr

    error       shift, and go to state 80
    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35
    LBRACE      shift, and go to state 40
    RBRACE      shift, and go to state 81
    SEMI        shift, and go to state 42
    IF          shift, and go to state 43
    WHILE       shift, and go to state 44
    RETURN      shift, and go to state 45

    StatementError  go to state 82
    Statement       go to state 83
    StatementList   go to state 84
    Expr            go to state 50
    ExprList        go to state 51


State 41

    9 FunctionBody: LBRACE RBRACE •

    $default  reduce using rule 9 (FunctionBody)


State 42

   34 Statement: SEMI •

    $default  reduce using rule 34 (Statement)


State 43

   37 Statement: IF • LPAR ExprList RPAR StatementError ELSE StatementError
   38          | IF • LPAR ExprList RPAR StatementError

    LPAR  shift, and go to state 85


State 44

   39 Statement: WHILE • LPAR ExprList RPAR StatementError

    LPAR  shift, and go to state 86


State 45

   40 Statement: RETURN • SEMI
   41          | RETURN • ExprList SEMI
   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR
   74 ExprList: • ExprList COMMA Expr
   75         | • Expr

    IDENTIFIER  shift, and go to state 28
    CHRLIT      shift, and go to state 29
    DECIMAL     shift, and go to state 30
    NATURAL     shift, and go to state 31
    PLUS        shift, and go to state 32
    MINUS       shift, and go to state 33
    NOT         shift, and go to state 34
    LPAR        shift, and go to state 35
    SEMI        shift, and go to state 87

    Expr      go to state 50
    ExprList  go to state 88


State 46

    8 FunctionBody: LBRACE DeclarationsAndStatements • RBRACE
   12 DeclarationsAndStatements: DeclarationsAndStatements • Statement
   13                          | DeclarationsAndStatements • Declaration
   20 Declaration: • TypeSpec DeclaratorList SEMI
   21            | • error SEMI
   24 TypeSpec: • CHAR
   25         | • INT
   26         | • VOID
   27         | • SHORT
   28         | • DOUBLE
   33 Statement: • ExprList SEMI
   34          | • SEMI
   35          | • LBRACE StatementList RBRACE
   36          | • LBRACE RBRACE
   37          | • IF LPAR ExprList RPAR StatementError ELSE StatementError
   38          | • IF LPAR ExprList RPAR StatementError
   39          | • WHILE LPAR ExprList RPAR StatementError
   40          | • RETURN SEMI
   41          | • RETURN ExprList SEMI
   42          | • LBRACE error RBRACE
   45 Expr: • Expr ASSIGN Expr
   46     | • Expr PLUS Expr
   47     | • Expr MINUS Expr
   48     | • Expr MUL Expr
   49     | • Expr DIV Expr
   50     | • Expr MOD Expr
   51     | • Expr OR Expr
   52     | • Expr AND Expr
   53     | • Expr BITWISEAND Expr
   54     | • Expr BITWISEOR Expr
   55     | • Expr BITWISEXOR Expr
   56     | • Expr EQ Expr
   57     | • Expr NE Expr
   58     | • Expr LE Expr
   59     | • Expr GE Expr
   60     | • Expr LT Expr
   61     | • Expr GT Expr
   62     | • PLUS Expr
   63     | • MINUS Expr
   64     | • NOT Expr
   65     | • IDENTIFIER LPAR ArgList RPAR
   66     | • IDENTIFIER
   67     | • NATURAL
   68     | • CHRLIT
   69     | • DECIMAL
   70     | • LPAR ExprList RPAR
   71     | • IDENTIFIER LPAR RPAR
   72     | • IDENTIFIER LPAR error RPAR
   73     | • LPAR error RPAR
   74 ExprList: • ExprList COMMA Expr
   75         | • Expr
